--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 ### Database Configurations
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/grocery
 spring.datasource.username=root
 spring.datasource.password=
@@ -9,3 +9,5 @@ spring.jpa.show-sql: true
 
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+secret=groceryAppAbhiAndHarshil
